Fix Product Detail Left Alignment Problem
float: left;
clean: left;
*use this make an element go to a new line and float left!

--- a/HTML/css/grid.css
+++ b/HTML/css/grid.css
@@ -11,6 +11,12 @@
 	box-sizing: border-box;
 }
 
+@media (max-width: 1651px) {
+.container {
+	margin-left: 25%;
+}
+}
+
 @media (max-width: 1513px) {
 	.container {
 width: 55%;
