--- a/HTML/css/news.css
+++ b/HTML/css/news.css
@@ -185,7 +185,7 @@ background: white;
 }
 
 #footer {
-	top:120em;
+	top:30em;
 
 }
 
