--- a/HTML/css/productDetail-sofa.css
+++ b/HTML/css/productDetail-sofa.css
@@ -12,7 +12,9 @@
 	/* margin-left:4.7%; */
 	/* left: -10em; */
 	top: 5em;
-	left: 10%;
+	left: 20%;
+	float: left;
+	clear: left;
 
 
 }
@@ -190,7 +192,7 @@
 
 @media (max-width: 1707px) {
 	.Images {
-		left: 25%
+		left: 20%
 	}
 }
 @media (max-width: 1239px) {
@@ -198,7 +200,7 @@
 		top: 100em;
 	}
 }
-@media (max-width: 1120px) {
+@media (max-width: 1400px) {
 	.Images {
 		left: 10%;
 		width: 40%;
